--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,18 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs'
+    id 'com.google.firebase.crashlytics'
+    id 'com.google.dagger.hilt.android'
 }
-
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "ve.com.mariomendoza.waifupaper"
         minSdk 26
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -18,37 +21,100 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField("String", "BASE_URL", "\"https://bits-andpixels.com/api/waifus/\"")
+            buildConfigField("String", "BASE_URL_IMG", "\"https://bits-andpixels.com/uploads/\"")
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", "\"https://bits-andpixels.com/api/waifus/\"")
+            buildConfigField("String", "BASE_URL_IMG", "\"https://bits-andpixels.com/uploads/\"")
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
     }
     kotlinOptions {
         jvmTarget = '1.8'
     }
-}
 
+    buildFeatures {
+        viewBinding true
+    }
+}
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
+    def room_version = "2.4.3"
+
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.2'
+    implementation "androidx.activity:activity-ktx:1.5.1"
+    implementation "androidx.fragment:fragment-ktx:1.5.2"
+
+    // retrofit GSON
+    implementation  'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation  'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation  'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.3.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.2.0'
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.1'
 
     implementation 'com.github.mabbas007:TagsEditText:1.0.5'
     implementation 'me.gujun.android.taggroup:library:1.4@aar'
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    //Preferencias de Usuario
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+
+    //Dagger Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+
+    //Base de datos room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    //DB Debug
+    implementation 'com.github.amitshekhariitbhu:Android-Debug-Database:1.0.6'
+
+    //palette color
+    implementation 'androidx.palette:palette:1.0.0'
+
+    //Ads Publicidad
+    implementation 'com.google.android.gms:play-services-ads:21.5.0'
+
+    //image compressor
+    implementation 'id.zelory:compressor:3.0.1'
+    //image manager
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    kapt 'com.github.bumptech.glide:compiler:4.13.2'
+
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
+
+    implementation "com.airbnb.android:lottie:3.4.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes = true
 }
